[package]
name = "lambda-database-migration-aware-health-check"
version = "0.1.0"
edition = "2021"
license = "MIT"

[package.metadata.cargo-udeps.ignore]
normal = ["tikv-jemallocator-global"]

[dependencies]
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.12.0"
aws-sdk-elasticloadbalancingv2 = "1.10.0"
aws-sdk-secretsmanager = "1.11.0"
aws_lambda_events = { version = "0.13.0", default-features = false, features = [
    "cloudwatch_events",
] }
envconfig = "0.10.0"

lambda_runtime = "0.9.0"
mysql = { version = "24.0.0", default-features = false, features = [
    "default-rustls",
] }
serde = "1.0.193"
serde_json = "1.0.108"
tikv-jemallocator-global = "0.5.0"
tokio = { version = "1.33.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
] }
